5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1806_2102.log
== TEST (2019-06-04 16:11:38) 
-- CODE:
from numpy import
z = array(eval(input("Digite um vetor contendo numeros inteiros: ")))
i = 0

while(i < len(z)):
	if(z[i]%2 != 0):
		z[1] = 0
	i = i + 1

print(z)	
-- ERROR:
File "XXXX", line 1
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:11:47) 
-- CODE:
from numpy import *
z = array(eval(input("Digite um vetor contendo numeros inteiros: ")))
i = 0

while(i < len(z)):
	if(z[i]%2 != 0):
		z[1] = 0
	i = i + 1

print(z)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 16:12:11) 
-- CODE:
from numpy import *
z = array(eval(input("Digite um vetor contendo numeros inteiros: ")))
i = 0

while(i < len(z)):
	if(z[i]%2 != 0):
		z[i] = 0
	i = i + 1

print(z)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 16:12:27) 
-- CODE:
from numpy import *
z = array(eval(input("Digite um vetor contendo numeros inteiros: ")))
i = 0

while(i < len(z)):
	if(z[i]%2 != 0):
		z[i] = 0
	i = i + 1

print(z)	
-- EXECUTION TIME:
1.15378
-- TEST CASE 1:
---- input:
[11,21,31,41,51]
---- correct output:
[0 0 0 0 0]
---- user output:
[0 0 0 0 0]
-- TEST CASE 2:
---- input:
[12,22,32,42,52]
---- correct output:
[12 22 32 42 52]
---- user output:
[12 22 32 42 52]
-- TEST CASE 3:
---- input:
[1,3,5,2,4,6]
---- correct output:
[0 0 0 2 4 6]
---- user output:
[0 0 0 2 4 6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
